fix: dailynotes timezone and scrollbar aesthetics

--- a/packages/unigraph-dev-explorer/src/index.css
+++ b/packages/unigraph-dev-explorer/src/index.css
@@ -5,14 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none;  /* Firefox */
-
-}
-
-::-webkit-scrollbar { 
-  display: none;  /* Safari and Chrome */
 }
 
 code {
